# test_example_cookiecutter_cpp_project

./: .gitlab-ci.yml  .readthedocs.yml  CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md  example-cookiecutter-cpp-projectConfig.cmake.in  pyproject.toml  setup.py  sonar-project.properties
.github/workflows/: ci.yml  pypi.yml  sonarcloud.yml
.gitlab/issue_templates/: Bug.md  Default.md
.gitlab/merge_request_templates/: Default.md
app/: CMakeLists.txt  example-cookiecutter-cpp-project_app.cpp  test-cookiecutter-cpp-project_app.cpp
doc/: CMakeLists.txt  conf.py  index.rst  requirements-rtd.txt
include/example-cookiecutter-cpp-project/: example-cookiecutter-cpp-project.hpp
include/test-cookiecutter-cpp-project/: test-cookiecutter-cpp-project.hpp
python/examplecookiecuttercppproject/: __init__.py  _example-cookiecutter-cpp-project.cpp
python/testcookiecuttercppproject/: __init__.py  _test-cookiecutter-cpp-project.cpp
src/: CMakeLists.txt  example-cookiecutter-cpp-project.cpp
tests/: CMakeLists.txt  example-cookiecutter-cpp-project_t.cpp  test-cookiecutter-cpp-project_t.cpp
tests/python/: test_python_bindings.py
